logs/Slang/generated/hdlconv/hdlconvertor_p599.sv.log
name: hdlconvertor_p599
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p599.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p599.sv:4:21: error: use of undeclared identifier '$realtobits'
wire [64:1] net_r = $realtobits(r);
                    ^~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p599.sv:10:9: error: language feature not yet supported
initial assign r = $bitstoreal(net_r);
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
